feat: migrate from maven to gradle 7.6.6 and upgrade to jdk 17